# rooz

./: .gitignore  .rooz.toml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml  integration.yml  release.yml  rust.yml
examples/: dotnet-nats.rooz.toml  dotnet-nats.rooz.yaml  local.yaml  sidecar-config.yaml  volume-subpath.yaml  volume-v2.yaml
examples/bases/: base.yaml  base2.yaml  overlay.yaml
examples/encrypt/: example-secrets.rooz.yaml
examples/extends/: base.yaml  overlay.yaml
examples/install/: install.yaml
joey/: Cargo.toml
joey/src/: cli.rs  main.rs  progress.rs
rooz/: Cargo.toml
rooz-git/: Dockerfile
rooz/src/: cli.rs  constants.rs  main.rs
rooz/src/api/: config.rs  container.rs  crypt.rs  sidecar.rs  volume.rs
rooz/src/api/workspace/: mod.rs  remove.rs  start.rs
rooz/src/cmd/: init.rs  list.rs  mod.rs  new.rs  remote.rs  update.rs
rooz/src/cmd/config/: edit.rs  mod.rs
rooz/src/config/: crypt.rs  runtime.rs
rooz/src/model/: mod.rs  types.rs  volume.rs
rooz/src/util/: id.rs  labels.rs  mod.rs
scripts/: test-daemon.sh
src/: age.rs  age_utils.rs  backend.rs  cli.rs  constants.rs  container.rs  exec.rs  filter.rs  git.rs  id.rs  image.rs  labels.rs  lib.rs  main.rs  sidecars.rs  ssh.rs  types.rs  volume.rs  workspace.rs
src/api/: config.rs  container.rs  crypt.rs  exec.rs  image.rs  mod.rs  sidecar.rs  system_config.rs  volume.rs  workspace.rs
src/api/workspace/: config.rs  create.rs  enter.rs  mod.rs  remove.rs  restart.rs  start.rs  stop.rs
src/cmd/: init.rs  list.rs  mod.rs  new.rs  prune.rs  remote.rs  remove.rs  stop.rs  update.rs
src/cmd/config/: edit.rs  mod.rs  show.rs  template.rs
src/config/: config.rs  crypt.rs  mod.rs  runtime.rs  secret.rs
src/model/: config.rs  mod.rs  types.rs  volume.rs
src/util/: backend.rs  crypt.rs  git.rs  id.rs  labels.rs  mod.rs  ssh.rs
tests/: interactive.rs  lifecycle.rs  networks.rs  sidecars.rs  smoke.rs  volumes.rs
tests/harness/: mod.rs
wip/: keep.yaml
