[package]
name = "rooz"
version = "0.133.0"
edition = "2021"

[dependencies]
age = {version = "0.11.1", features = ["armor"] }
base64 = "0.22.1"
bollard = { version = "0.19.2" }
bollard-stubs = "1.49.0-rc.28.3.3"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap_complete = "4.5.24"
colored = "3.0.0"
crossterm = {version = "0.29.0", default-features = false, features = [
    "events",
    "use-dev-tty", 
    # Add these when you need fancy display:
    # "cursor",
    # "style", 
    # "terminal",
] }
ctrlc = "3.4.5"
edit = "0.1.5"
env_logger = "0.11.5"
futures = "0.3.30"
gix-config = { version = "0.46.0", features = ["serde"] }
handlebars = "6.0.0"
lazy_static = "1.5.0"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
log = "0.4.22"
openssh = { version = "0.11.0", features = ["native-mux"] }
rand = "0.9.0"
regex = "1.10.6"
serde = "1.0.209"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tabled = "0.20.0"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "io-std"] }
toml = "0.9.2"
url = "2.5.2"
